--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,7 @@
   </head>
   
   <body>
+    <script src="https://unpkg.com/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
